<resources>
    <string name="app_name">Eschool 2.0</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="successful_login">Successful login</string>
    <string name="login_failed">Login failed</string>
    <string name="name">Name</string>
    <string name="error">Error</string>
    <string name="show_password">Show password</string>
    <string name="over_mark">Over mark\u0020</string>
    <string name="place">Place\u0020</string>
    <string name="itog">Итоговые оценки</string>
    <string name="schedule">Расписание</string>
    <string name="homework">Домашнее задание</string>
    <string name="messages">Сообщения</string>
    <string name="statistics">Статистика</string>
    <string name="settings">Настройки</string>
    <string name="exit">Выход</string>
</resources>
